LPD-52426 Added new query params to manage search and filter
